[package]
name = "ost-environment-gate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
aws-config = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-ssm = "1"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = { version = "9", features = ["use_pem"] }
lambda_http = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
wiremock = "0.6"
